Switch to a CSS-based solution for setting text direction on meta

--- a/sass/8-site/primary/_posts-and-pages.scss
+++ b/sass/8-site/primary/_posts-and-pages.scss
@@ -181,6 +181,12 @@ article.grid-post {
 	}
 }
 
+/*rtl:ignore*/
+body.rtl .entry-meta {
+	direction: ltr;
+	text-align: right;
+}
+
 .posts-grid {
 
 	@include column-3;
