Output image credit attribution on attachment page

--- a/sass/8-site/primary/_posts-and-pages.scss
+++ b/sass/8-site/primary/_posts-and-pages.scss
@@ -336,3 +336,10 @@ article.page h6[id]::before {
 
 	@include margin-bottom(0);
 }
+
+body.attachment {
+
+	.entry-meta p:not(:last-child) {
+		margin-bottom: 0;
+	}
+}
