Update stylelint rules for latest wp-scripts

--- a/sass/0-mixins/_mixins-master.scss
+++ b/sass/0-mixins/_mixins-master.scss
@@ -1,3 +1,6 @@
+/* stylelint-disable at-rule-empty-line-before */
+/* stylelint-disable block-closing-brace-newline-after */
+
 // Module Sizing
 @mixin module-width($desktop-bp, $desktop-width) {
 	width: 100%;
