--- a/sass/10-plugins/_calendar.scss
+++ b/sass/10-plugins/_calendar.scss
@@ -1,4 +1,5 @@
 /* Events Calendar Pro CSS */
+/* stylelint-disable selector-class-pattern */
 
 .tribe-filter-bar .tribe-filter-bar-c-pill--button .tribe-filter-bar-c-pill__pill {
 	background-color: #f8f9fa;
