--- a/sass/8-site/primary/_posts-and-pages.scss
+++ b/sass/8-site/primary/_posts-and-pages.scss
@@ -6,10 +6,6 @@
 	display: none;
 }
 
-body {
-	background-color: #f7e912;
-}
-
 // for single
 article.post {
 
@@ -47,6 +43,7 @@ article.post {
 
 		figure {
 			text-align: center;
+			margin-bottom: 1em;
 		}
 
 		figure.size-large:not(.is-resized),
